fix: avoid y-overflow

--- a/src/style.css
+++ b/src/style.css
@@ -11,27 +11,33 @@ html, body {
 #code {
   position: absolute;
   right: 0;
-  bottom: 0;
-  width: 50%;
-  height: 100%;
+  top: 0;
+  width: 50vw;
+  height: 98vh;
   margin: 0;
+}
+
+#buttons {
+  height: 24px;
 }
 
 #code textarea {
   width: 100%;
-  height: 100%;
+  height: calc(98vh - 35px);
 }
 
 #blockly-workspace {
+  margin: 0;
   position: absolute;
   left: 0;
-  bottom: 0;
-  width: 50%;
-  height: 100%;
+  top: 0;
+  width: 50vw;
+  height: 98vh;
 }
 
 .workspace-container {
-  height: 100%;
+  margin: 0;
+  height: 98vh;
   width: 100%;
   text-align: left;
 }
